# skills-standaarden

./: .editorconfig  .gitignore  .lychee.toml  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DISCLAIMER.md  README.md  publiccode.yml  pyproject.toml  release-please-config.json
.claude-plugin/: marketplace.json  plugin.json
.cursor-plugin/: plugin.json
.github/: dependabot.yml  labeler.yml  pull_request_template.md
.github/monitoring/: checksums.json
.github/workflows/: ci.yml  labeler.yml  monitoring-content.yml  monitoring-links.yml  sync-check.yml
.plugin/: plugin.json
scripts/: extract_urls.py  generate_plugin.py  monitor_content.py
skills/ls/: SKILL.md  audit.md
skills/ls-api/: SKILL.md  audit.md  conflicts.md  reference.md
skills/ls-bomos/: SKILL.md  audit.md  conflicts.md  reference.md
skills/ls-dk/: SKILL.md  audit.md  conflicts.md  reference.md
skills/ls-egov/: SKILL.md  audit.md  conflicts.md
skills/ls-fsc/: SKILL.md  audit.md  conflicts.md  reference.md
skills/ls-iam/: SKILL.md  audit.md  conflicts.md  reference.md
skills/ls-logboek/: SKILL.md  audit.md  conflicts.md  reference.md
skills/ls-notif/: SKILL.md  audit.md  conflicts.md  reference.md
skills/ls-pub/: SKILL.md  audit.md  conflicts.md  reference.md
tests/: test_extract_urls.py  test_monitor_content.py
tests/fixtures/: sample_skill.md
